# time-watcher

./: .gitignore  Cargo.toml  LICENSE
src/: main.rs
src/cli/: args.rs
src/data/: file.rs  time.rs
src/time/: data.rs
