[package]
name = "time-watcher"
version = "0.1.0"
edition = "2021"
authors = ["Christian Skupien <christian.skupien.td@web.de>"]
description = "A simple Time Watcher for work"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.32", features = ["derive"] }
csv = "1.1.6"
duration-str = "0.5.0"
serde = { version = "1.0.152", features = ["derive"] }
